Bug 143716 - scripts packages are incorrectly uninstalled
Summary: scripts packages are incorrectly uninstalled
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Tools/Script Manager (other bugs)
Version First Reported In: 1.4.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-04-02 07:26 UTC by Sergio Pistone
Modified: 2007-06-02 10:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
scriptmanager.cpp patch (works with 1.4.5 and current svn) (2.19 KB, patch)
2007-04-13 21:44 UTC, Sergio Pistone
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio Pistone 2007-04-02 07:26:04 UTC
Version:           1.4.5 (using KDE KDE 3.5.6)
Installed from:    Gentoo Packages
OS:                Linux

when uninstalling scripts, only the directory containing the executable gets removed, leaving part of the script package's files if said executable was not on the script root folder (check what happens when removing wiki-lyrics v0.10 to see what i'm talking about).
to correctly remove a script, the whole tree belonging to it's package should be be removed from the scripts directory.
Comment 1 Sergio Pistone 2007-04-13 21:44:10 UTC
Created attachment 20266 [details]
scriptmanager.cpp patch (works with 1.4.5 and current svn)

patch to fix the uninstalling of scripts (remove the whole script package tree,
not just the directory containing the executable)
Comment 2 Wayno 2007-06-01 23:18:40 UTC
This bug is reproduceamble at will.  What happens is when a script is removed, it is NOT deleted.  So when you try to re-install it, it says the script is already installed, even though the script does NOT show up on the installed script list.

files (scripts) should be deleted from 


/home/<useridgoeshere>/.kde/share/apps/amarok/scripts-data/<nameofscript.xml>

and  
/home/<useridgoeshere>/.kde/share/apps/amarok/scripts/<nameofscript.xml>

Wayno
Comment 3 Mark Kretschmann 2007-06-02 10:35:37 UTC
Patch committed in r670627. Thanks Sergio!