Always uninstall scripts correctly. Thanks Sergio!

BUG: 143716

svn path=/branches/stable/extragear/multimedia/amarok/; revision=670627